bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: newfolder5
    labels:
        com.docker.compose.project: newfolder5
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: newfolder5
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: newfolder5
                com.docker.compose.service: backend
                com.docker.compose.network.external: "true"
                com.docker.compose.network.internal: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: resume-backend
                  image: newfolder5-backend
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://localhost:8000/health']
                    periodSeconds: 30
                    initialDelaySeconds: 40
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: backend-8000
                      containerPort: 8000
