bridge/base/external-network-policy.yaml
#! external-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: external-network-policy
    namespace: newfolder5
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.external: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.external: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.external: "true"
